--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/reset.css">
@@ -29,7 +30,9 @@
                 <p id="mif">WOW Offers! 60-80% Off For All Story Books</p>
 
                 <div class="menu">
-                    <p class="me_over">Language</p>
+                    <p class="me_over">Language <span class="material-icons-outlined">
+                            expand_more
+                        </span></p>
                     <ul class="sdown">
                         <li>English</li>
                         <li>Francaise</li>
@@ -38,7 +41,9 @@
                         <li>Italian</li>
                     </ul>
 
-                    <p class="me_over">Currency</p>
+                    <p class="me_over">Currency<span class="material-icons-outlined">
+                            expand_more
+                        </span></p>
                     <ul class="sdown">
                         <li>USD</li>
                         <li>EUR</li>
@@ -46,7 +51,9 @@
                         <li>INR</li>
                     </ul>
 
-                    <p class="me_over">My Account</p>
+                    <p class="me_over">My Account<span class="material-icons-outlined">
+                            expand_more
+                        </span></p>
                     <ul class="sdown">
                         <li>Log In</li>
                         <li>Register</li>
@@ -89,12 +96,15 @@
 
         </div>
 
-<div class="container">
 
 
 
-        <div class="menurh">
-            
+
+
+        <div class="container">
+
+            <div class="menurh">
+
                 <div class="inf_redbar">
 
                     <p><a href="#">HOME</a></p>
@@ -179,24 +189,24 @@
                 <div class="headersearch">
                     <form action="search">
                         <input type="search" name="search" id="search" placeholder="Search Our Category">
-
-                        <!-- <input type="submit"><img src="" alt=""> -->
-                        <button type="submit" class="sbtn">
-                            <img src="" alt="" class="ti-search">
-                        </button>
-                    </form>
+                    
+                    <!-- <input type="submit"><img src="" alt=""> -->
+                    <button type="submit" class="sbtn">
+                        <img src="img/search_white_36dp.svg" alt="1" class="ti-search">
+                    </button>
+</form>
                 </div>
             </div>
         </div>
     </header>
 
-   
+
 
 
 
 
     <footer>
-        <div class="f_m">
+        <div class="f_m" style="background-image: url(//cdn.shopify.com/s/files/1/0319/5758/1961/files/footer_banner.png?v=1582281059);">
 
             <ul class="fm">
                 <li><img src="https://cdn.shopify.com/s/files/1/0319/5758/1961/files/logo_2_230x.png?v=1584504879"
