--- a/index.html
+++ b/index.html
@@ -7,20 +7,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20,100,0,-25" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@10..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@10,100,0,-25" />
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/reset.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
+
+
 </head>
 
 <body>
     <header>
-        <div class="modal">
-            <div class="inf_redbar">
-                <h4 class="redbar">FREE SHIPPING FOR ORDERS ABOVE<span> $500.00 USD</span></h4>
-                <p class="barclose" id="x">X</p>
-            </div>
+
+        <div class="inf_redbar">
+            <h4 class="redbar">FREE SHIPPING FOR ORDERS ABOVE<span> $500.00 USD</span></h4>
+            <p class="barclose" id="x">X</p>
         </div>
+
 
 
 
@@ -30,7 +42,7 @@
                 <p id="mif">WOW Offers! 60-80% Off For All Story Books</p>
 
                 <div class="menu">
-                    <p class="me_over">Language <span class="material-icons-outlined">
+                    <p class="me_over">Language<span class="material-symbols-sharp">
                             expand_more
                         </span></p>
                     <ul class="sdown">
@@ -41,7 +53,7 @@
                         <li>Italian</li>
                     </ul>
 
-                    <p class="me_over">Currency<span class="material-icons-outlined">
+                    <p class="me_over">Currency<span class="material-symbols-sharp">
                             expand_more
                         </span></p>
                     <ul class="sdown">
@@ -51,7 +63,7 @@
                         <li>INR</li>
                     </ul>
 
-                    <p class="me_over">My Account<span class="material-icons-outlined">
+                    <p class="me_over">My Account<span class="material-symbols-sharp">
                             expand_more
                         </span></p>
                     <ul class="sdown">
@@ -101,102 +113,108 @@
 
 
 
-        <div class="container">
-
-            <div class="menurh">
-
-                <div class="inf_redbar">
-
-                    <p><a href="#">HOME</a></p>
-
-                    <p class="mover"><span>NEW</span><a href="">BOOK</a></p>
-
-                    <p class="mover"><a href="">CARTEGORY</a></p>
-
-                    <div id="ul_show">
-                        <ul class="sdown">
-                            <li>PRODUCT LAYOUT
-                                <ul class="menuin">
-                                    <li><a href="">Full Page</a></li>
-                                    <li><a href="">Sticky</a></li>
-                                    <li><a href="">4 Image</a></li>
-                                </ul>
-                            </li>
-
-                            <li>NEW LAYOUT
-                                <ul class="menuin">
-                                    <li><a href="">Bundle</a></li>
-                                    <li><a href="">Image Swatch</a></li>
-                                    <li><a href="">Verticale Tab</a></li>
-                                </ul>
-                            </li>
-
-                            <li>SIDEBAR
-                                <ul class="menuin">
-                                    <li><a href="">Left Sidebar</a></li>
-                                    <li><a href="">Right Sidebar</a></li>
-                                    <li><a href="">No Sidebar</a></li>
-                                </ul>
-                            </li>
-
-                            <li>THUMBNAL IMAGE
-                                <ul class="menuin">
-                                    <li><a href="">Left Image</a></li>
-                                    <li><a href="">Right Image</a></li>
-                                    <li><a href="">Bottom Image</a></li>
-                                </ul>
-                            </li>
-                            <li>3 COLUMN
-                                <ul class="menuin">
-                                    <li><a href="">3 Column Left</a></li>
-                                    <li><a href="">3 Column Right</a></li>
-                                    <li><a href="">3 Column Bottom</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
 
 
-                    <p><a href="#">COLLECTION</a></p>
+        <div class="menurh">
 
+            <div class="inf_redbar">
 
-                    <p class="mover"><span>HOT</span><a href="">PAGES</a></p>
+                <p><a href="#">HOME</a></p>
+
+                <p class="mover"><span class="flo">NEW</span><a href="">BOOK</a></p>
+
+                <p class="mover"><a href="">CARTEGORY<span class="material-symbols-rounded">
+                            expand_more
+                        </span></a></p>
+
+                <div id="ul_show">
                     <ul class="sdown">
-                        <li>About Us</li>
-                        <li>Contact Us</li>
-                        <li>Portfolio</li>
-                        <li>Look Book</li>
-                        <li>Wishlist</li>
-                        <li>FAQs</li>
-                        <li>Search</li>
-                    </ul>
+                        <li>PRODUCT LAYOUT
+                            <ul class="menuin">
+                                <li><a href="">Full Page</a></li>
+                                <li><a href="">Sticky</a></li>
+                                <li><a href="">4 Image</a></li>
+                            </ul>
+                        </li>
 
+                        <li>NEW LAYOUT
+                            <ul class="menuin">
+                                <li><a href="">Bundle</a></li>
+                                <li><a href="">Image Swatch</a></li>
+                                <li><a href="">Verticale Tab</a></li>
+                            </ul>
+                        </li>
 
-                    <p><a href="">BLOG</a></p>
+                        <li>SIDEBAR
+                            <ul class="menuin">
+                                <li><a href="">Left Sidebar</a></li>
+                                <li><a href="">Right Sidebar</a></li>
+                                <li><a href="">No Sidebar</a></li>
+                            </ul>
+                        </li>
 
-
-                    <p class="mover"><span>SALE</span><a href="">SHOP</a></p>
-                    <ul class="sdown">
-                        <li>English</li>
-                        <li>Francaise</li>
-                        <li>Arabic</li>
-                        <li>German</li>
-                        <li>Italian</li>
+                        <li>THUMBNAL IMAGE
+                            <ul class="menuin">
+                                <li><a href="">Left Image</a></li>
+                                <li><a href="">Right Image</a></li>
+                                <li><a href="">Bottom Image</a></li>
+                            </ul>
+                        </li>
+                        <li>3 COLUMN
+                            <ul class="menuin">
+                                <li><a href="">3 Column Left</a></li>
+                                <li><a href="">3 Column Right</a></li>
+                                <li><a href="">3 Column Bottom</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
 
 
-                <div class="headersearch">
-                    <form action="search">
-                        <input type="search" name="search" id="search" placeholder="Search Our Category">
-                    
-                    <!-- <input type="submit"><img src="" alt=""> -->
+                <p><a href="#">COLLECTION</a></p>
+
+
+                <p class="mover"><span class="flo">HOT</span><a href="">PAGES<span class="material-symbols-rounded">
+                            expand_more
+                        </span></a></p>
+                <ul class="sdown">
+                    <li>About Us</li>
+                    <li>Contact Us</li>
+                    <li>Portfolio</li>
+                    <li>Look Book</li>
+                    <li>Wishlist</li>
+                    <li>FAQs</li>
+                    <li>Search</li>
+                </ul>
+
+
+                <p><a href="">BLOG</a></p>
+
+
+                <p class="mover"><span class="flo">SALE</span><a href="">SHOP<span class="material-symbols-rounded">
+                            expand_more
+                        </span></a></p>
+                <ul class="sdown">
+                    <li>English</li>
+                    <li>Francaise</li>
+                    <li>Arabic</li>
+                    <li>German</li>
+                    <li>Italian</li>
+                </ul>
+            </div>
+
+
+            <div class="headersearch">
+                <form action="search">
+                    <input type="search" name="search" id="search" placeholder="Search Our Category">
+
+
                     <button type="submit" class="sbtn">
                         <img src="img/search_white_36dp.svg" alt="1" class="ti-search">
                     </button>
-</form>
-                </div>
+                </form>
             </div>
+        </div>
         </div>
     </header>
 
@@ -206,51 +224,76 @@
 
 
     <footer>
-        <div class="f_m" style="background-image: url(//cdn.shopify.com/s/files/1/0319/5758/1961/files/footer_banner.png?v=1582281059);">
+        <div id="footer1"
+            style="background-image: url(//cdn.shopify.com/s/files/1/0319/5758/1961/files/footer_banner.png?v=1582281059);">
+            <div cladss="container">
 
-            <ul class="fm">
-                <li><img src="https://cdn.shopify.com/s/files/1/0319/5758/1961/files/logo_2_230x.png?v=1584504879"
-                        alt="logo"></li>
-                <li><img src="" alt=""> Fiot Fashion Demo Store Demo Store USA</li>
-                <li><img src="" alt="">Call Us: 123-456-7898</li>
-                <li><img src="" alt="">Email s: Support@Fiot.Com</li>
-            </ul>
+                <div class="f_ali">
+                    <div class="f_inbox">
+                        <div class="box2"><img
+                                src="https://cdn.shopify.com/s/files/1/0319/5758/1961/files/logo_2.png?v=1584504879"
+                                alt="logo" style="margin-bottom: 18px;"></div>
+                        <ul class="fm">
+                            <li><i class="fa fa-map-marker"></i> Fiot Fashion Demo Store Demo Store USA</li>
+                            <li><i class="fa fa-phone"></i> Call Us: 123-456-7898</li>
+                            <li><i class="fa fa-envelope-o"></i> Email s: Support@Fiot.Com</li>
+                        </ul>
+                    </div>
 
-            <ul class="fm">
-                <li>YOUR ACCOUNT</li>
-                <li><a href="">Login</a></li>
-                <li><a href="">My Account</a></li>
-                <li><a href="">New Account</a></li>
-                <li><a href="">Wishlist</a></li>
-                <li><a href="">Look Book</a></li>
-            </ul>
+                    <div class="f_inbox">
+                        <h4>YOUR ACCOUNT</h4>
+                        <ul class="fm">
+                            <li><a href="">Login</a></li>
+                            <li><a href="">My Account</a></li>
+                            <li><a href="">New Account</a></li>
+                            <li><a href="">Wishlist</a></li>
+                            <li><a href="">Look Book</a></li>
+                        </ul>
+                    </div>
 
-            <ul class="fm">
-                <li>OUR COMPANY</li>
-                <li><a href="">About Us</a></li>
-                <li><a href="">Contact Us</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">SizeGuide</a></li>
-                <li><a href="">FAQs</a></li>
-            </ul>
+                    <div class="f_inbox">
+                        <h4>OUR COMPANY</h4>
+                        <ul class="fm">
+                            <li><a href="">About Us</a></li>
+                            <li><a href="">Contact Us</a></li>
+                            <li><a href="">Portfolio</a></li>
+                            <li><a href="">SizeGuide</a></li>
+                            <li><a href="">FAQs</a></li>
+                        </ul>
+                    </div>
 
-            <ul class="fm">
-                <li>SIGN UP & GET OFFER</li>
-                <li>
-                    <form action="email"><input type="email" value="email" name="email"
-                            placeholder="Enter Your Email Address Here..."></form>
-                </li>
-                <li><button type="submit"></button></li>
-                <li class="lisns">
-                    <a href=""><img src="" alt=""></a>
-                    <a href=""><img src="" alt=""></a>
-                    <a href=""><img src="" alt=""></a>
-                    <a href=""><img src="" alt=""></a>
-                    <a href=""><img src="" alt=""></a>
-                </li>
-            </ul>
+                    <div class="f_inbox">
+                        <h4>SIGN UP & GET OFFER</h4>
+                        <ul class="fm">
+                            <li>
+                                <!-- <div class="input_holder"></div> -->
+                                <form action="email">
+
+                                    <input type="email" value name="email"
+                                        placeholder="Enter Your Email Address Here..." id="email"></li>
+
+                                 <li>  <button type="submit" class="f_btn">SUBCRIBE</button>
+                                </form>
+                            </li> 
+                            <li class="li_sns">
+                                <a href=""><img src="" alt=""></a>
+                                <a href=""><img src="" alt=""></a>
+                                <a href=""><img src="" alt=""></a>
+                                <a href=""><img src="" alt=""></a>
+                                <a href=""><img src="" alt=""></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div id="ftrsftrs">
+
+
+
+
+
+
+        <div id="footer2">
             2019 - 20 Powered by Pixelstrap
 
             <div class="lisns">
